Revision history for Perl extension SVN::Notify

2.84
      - Added `--smtp-tls` to the output of `man svnnotify`.
      - Removed `--smtp-authtype` from the output of `man svnnotify`.

2.83  2011-10-29T00:19:07Z
      - Added the `smtp_port` parameter and accompanying `--smtp-port` option.
        Patch from Gustavo Leite de Mendonça Chaves.
      - Switched from Net::SMTP and Net::SMTP_auth to Net::SMTP::TLS, which
        handles TLS and non TLS and auth and non-auth in any combintation.
        Based on patches from Dawood Sangameshwari and Marino Miculan (RT #
        40188).
      - Added `--smtp-tls` option to enable TLS. Based on patch from Marino
        Miculan.
      - Deprecated `--smtp-authtype`, which is now a no-op. Net::SMTP::TLS
        determines the auth type to use by asking the SMTP server.

2.82  2011-06-26T05:12:04
      - Moved the repository to
        [GitHub](https://github.com/theory/svn-notify/). Yes, I'm aware of the
        irony.

2.81  2011-02-19T03:09:43
      - Removed deprecated use of `qw(...)` as parentheses.
      - Fixed test failures due to a change in the opration of MIME-Q
        encoding.

2.80  2010-01-16T04:40:00
      - Fixed the regular expression for detecting JIRA keys. Thanks to David
        Ferguson for the report (RT#51620).
      - Fixed test failure on Perl 5.11.2.
      - Switched to improved URL links with link text in the documentation.

2.79  2009-04-03T00:36:29
      - Removed a superfluous colon from the dashed line under "Ticket Links"
        in the plain-text rendition of the message. Repored by Dirk Olmes.
      - Fixed a bug in the subject handling code where it could truncate a
        subject to very few characters if it has a dot (.) near the beginning.
        Now it skips 10 characters before looking for a dot at which to
        truncate text for the subject. Reported by Martijn van Beers, who
        noticed a comment in the source indicating that it should have been