@@ -9,3 +9,4 @@
 /pm_to_blib
 /t/scripts
 /t/data/output.txt
+/.project
